# notebooklm-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  README.md
rust/: Cargo.toml
rust/crates/notebooklm-core/: Cargo.toml
rust/crates/notebooklm-core/src/: config.rs  errors.rs  lib.rs  types.rs
rust/crates/notebooklm-core/src/auth/: auth_manager.rs  mod.rs
rust/crates/notebooklm-core/src/resources/: mod.rs  resource_handlers.rs
rust/crates/notebooklm-core/src/session/: browser_session.rs  mod.rs  session_manager.rs  shared_context_manager.rs
rust/crates/notebooklm-core/src/tools/: definitions.rs  handlers.rs  mod.rs  source_ops.rs
rust/crates/notebooklm-core/src/utils/: logger.rs  mod.rs  page_utils.rs  settings_manager.rs  stealth.rs
rust/crates/notebooklm-mcp/: Cargo.toml
rust/crates/notebooklm-mcp/src/: main.rs  server.rs
