[package]
name = "notebooklm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core business logic for notebooklm-mcp (Rust rewrite)"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
directories = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
dashmap = { workspace = true }
walkdir = { workspace = true }
slug = { workspace = true }
chrono = { workspace = true }
chromiumoxide = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
